# mcp-server-git-cz

./: .env  .env.example  GEMINI.md  README.md  pyproject.toml  run-git-cz.sh
mcp_server_git_cz/: server.py
mcp_server_git_cz/tool/: commit_message_tool.py
src/mcp_server_git_cz/: server.py
src/mcp_server_git_cz/tool/: commit_message_tool.py  git_utils.py
